Ensure sidebar doesn't overlap with content

--- a/static/css/product.css
+++ b/static/css/product.css
@@ -1,6 +1,7 @@
 article section {
     margin-bottom: 1.5em;
-	width: 78%;
+    margin-right: 224px;
+	display: block;
 }
 
 article section img {
